--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "gsap": "^3.12.5",
     "highlightjs": "^9.16.2",
     "js-yaml": "^4.1.0",
     "markdown-it": "^14.1.0",
