--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "markdown-it-highlightjs": "^4.1.0",
     "pinia": "^2.1.7",
     "sass": "^1.77.6",
+    "swapy": "^0.0.6",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
